@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n wagtailusers_tags %}
 {% load gravatar %}
 <table class="listing">
     <thead>
@@ -26,15 +26,18 @@
     <tbody>
         {% for user in users %}
             <tr>
-                <td class="title">
+                <td class="title" valign="top">
                     <h2>
                         <span class="avatar small icon icon-user"><img src="{% gravatar_url user.email 25 %}" /></span>
                         <a href="{% url 'wagtailusers_users:edit' user.pk %}">{{ user.get_full_name|default:user.get_username }}</a>
                     </h2>
+                    <ul class="actions">
+                        {% user_listing_buttons user %}
+                    </ul>
                 </td>
-                <td class="username">{{ user.get_username }}</td>
-                <td class="level">{% if user.is_superuser %}{% trans "Admin" %}{% endif %}</td>
-                <td class="status"><div class="status-tag {% if user.is_active %}primary{% endif %}">{% if user.is_active %}{% trans "Active" %}{% else %}{% trans "Inactive" %}{% endif %}</div></td>
+                <td class="username" valign="top">{{ user.get_username }}</td>
+                <td class="level" valign="top">{% if user.is_superuser %}{% trans "Admin" %}{% endif %}</td>
+                <td class="status" valign="top"><div class="status-tag {% if user.is_active %}primary{% endif %}">{% if user.is_active %}{% trans "Active" %}{% else %}{% trans "Inactive" %}{% endif %}</div></td>
             </tr>
         {% endfor %}
     </tbody>
